data_migration import of inventory

--- a/data_migration/wizard/file_import_view.xml
+++ b/data_migration/wizard/file_import_view.xml
@@ -388,5 +388,65 @@
 
         <menuitem action="invoice_file_import" id="menu_invoice_file_import" name="Import Invoice" parent="data_migration_menu"/>
 
+        <record id="view_inventory_import_form" model="ir.ui.view">
+            <field name="name">inventory.import.form</field>
+            <field name="model">inventory.import</field>
+            <!-- Tipo di vista, ovvero architettura principale della vista, in questo caso è un form -->
+            <field name="type">form</field>
+            <!-- Specifica della struttura della vista usando XML -->
+            <field name="arch" type="xml">
+                <form>
+                    <field name="state" invisible="1"/>
+                    <!-- Items visibles in state "import" -->
+                    <group colspan="8" col="8" states="import">
+                        <!-- Percorso del file -->
+                        <field name="file_name" invisible="1" />
+                        <field name="content_base64" filename="file_name" />
+                        <newline/>
+                        <field name="location_id" />
+                        <field name="date" />
+                        <field name="format" />
+                    </group>
+                    <!-- Items per lo stato end -->
+                    <group colspan="8" col="8" states="end">
+                        <label string="Import file. Verra segnalata la fine del'importazione, nelle 'Messaggi' (Vendite -> Configurazione -> Email -> Messaggi)."/>
+                    </group>
+
+                   <!-- Separatore -->
+                    <group colspan="8" col="8">
+                        <separator string="" colspan="8"/>
+                        <label colspan="6" width="220"/>
+                    </group>
+
+                    <!-- Pulsanti per lo stato "import" -->
+                    <group colspan="8" col="8" states="import">
+                        <button icon="gtk-cancel" special="cancel" string="Annulla"/>
+                        <button type="object" name="actionCheckEncoding" string="Inizia Importazione" icon="gtk-ok"/>
+                    </group>
+
+                    <!-- Items visibles in state "end" -->
+                    <group colspan="8" col="8" states="end">
+                        <button icon="gtk-ok" special="cancel" string="Chiudi"/>
+                    </group>
+                </form>
+            </field>
+        </record>
+
+        <!-- Azione per aprire il wizard, questa azione viene associata ad una voce di menu definita in purchase_import_pricelist/partner_properties_view.xml -->
+        <record id="inventory_file_import" model="ir.actions.act_window">
+            <field name="name">Importazione Inventario (clienti/fornitori) in formato Excel (xls)</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">inventory.import</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">form</field>
+            <field name="view_id" ref="view_inventory_import_form"/>
+            <field name="target">new</field>
+        </record>
+
+        <menuitem action="inventory_file_import" id="menu_inventory_file_import" name="Import Inventory" parent="data_migration_menu"/>
+
+
+
+
     </data>
 </openerp>
