l10n_it_sale now when validate a stock picking open automaticaly DDT assign

--- a/l10n_it_sale/wizard/assign_ddt.xml
+++ b/l10n_it_sale/wizard/assign_ddt.xml
@@ -9,8 +9,11 @@
             <field name="arch" type="xml">
                 <form string="Assign DDT">
                     <group col="2">
-                        <label colspan="2" string="This will assign the DDT number"/>
-                        <field name="ddt_number" />
+                        <field name="number_method" nolabel="1" />
+                        <group col="2" attrs="{'invisible': [('number_method', '=', 'sequence')]}" >
+                            <label colspan="2" string="This will assign the DDT number"/>
+                            <field name="ddt_number" />
+                        </group>
                         <!--<field name="ddt_next_number" readonly="1"/>-->
                         <field name="ddt_date" />
                         <separator colspan="2"/>
