--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -1249,7 +1249,7 @@ label.error {
     padding-top: 3px;
 /*    font-size: 90%; */
     color: #333;
-    max-width: 350px;
+/*    max-width: 350px; */
     display: inline-block;
     text-overflow: ellipsis;
     white-space: nowrap;
