web_client more big tabs

--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -1225,6 +1225,7 @@ label.error {
     -moz-border-radius: 0;
     -webkit-border-radius: 0;
     line-height: 20px;
+    height: 25px;
     font-size: 95%;
     color: #8e8e8e;
     font-weight: normal;
