Now check if validate invoice of wrong journal respect fiscal position

--- a/account_invoice_extended/views/account_view.xml
+++ b/account_invoice_extended/views/account_view.xml
@@ -11,9 +11,10 @@
 			<field name="model">account.invoice</field>
 			<field name="inherit_id" ref="account.invoice_form"/>
 			<field name="arch" type="xml">
-				<field name="fiscal_position" position="after">
-                    <button name="button_change_fiscal_position" states="draft" string="Change"
-                        type="object" groups="base.group_user" icon="terp-stock_effects-object-colorize"/>
+				<field name="fiscal_position" position="replace">
+                    <field name="fiscal_position" widget="selection" on_change="onchange_fiscal_position(journal_id, fiscal_position, type, context)"/>
+                    <!--<button name="button_change_fiscal_position" states="draft" string="Change"-->
+                        <!--type="object" groups="base.group_user" icon="terp-stock_effects-object-colorize"/>-->
 				</field>
 			</field>
 		</record>
