--- a/l10n_it_spesometro/wizard/wizard_export_view.xml
+++ b/l10n_it_spesometro/wizard/wizard_export_view.xml
@@ -7,13 +7,14 @@
         <record id="wizard_spesometro_export_view" model="ir.ui.view">
 	        <field name="name">wizard.spesometro.export.view</field>
 	        <field name="model">wizard.spesometro.export</field>
+	        <field name="type">form</field>
 	        <field name="arch" type="xml">
 		        <form string="Params">
-		        	<group>
-			        	<field name="file_spesometro" readonly="1"/>
-			        	<separator colspan="4" />
-			            <button name="execute_export" string="Export" type="object" icon="gtk-execute" />
-		            </group>
+		        	<!--<field name="file_to_import" />
+		        	<separator colspan="4" />-->
+		        	<field name="file_spesometro" readonly="1"/>
+		        	<separator colspan="4" />
+		            <button name="execute_export" string="Export" type="object" icon="gtk-execute" />
 		      	</form>
 	        </field>
     	</record>
