fix error on fiscal position onchange

--- a/account_invoice_extended/views/account_view.xml
+++ b/account_invoice_extended/views/account_view.xml
@@ -19,6 +19,19 @@
 			</field>
 		</record>
 
+        <record model="ir.ui.view" id="account_invoice_supplier_form_onchange_fiscal_position">
+			<field name="name">account.invoice.supplier.form.onchange.fiscal.position</field>
+			<field name="model">account.invoice</field>
+			<field name="inherit_id" ref="account.invoice_supplier_form"/>
+			<field name="arch" type="xml">
+				<field name="fiscal_position" position="replace">
+                    <field name="fiscal_position" widget="selection" on_change="onchange_fiscal_position(journal_id, fiscal_position, type, context)"/>
+                    <!--<button name="button_change_fiscal_position" states="draft" string="Change"-->
+                        <!--type="object" groups="base.group_user" icon="terp-stock_effects-object-colorize"/>-->
+				</field>
+			</field>
+		</record>
+
         <record id="view_invoice_form_picking_origin" model="ir.ui.view">
             <field name="name">account.invoice.picking_origin</field>
             <field name="model">account.invoice</field>
