--- a/account_financial_report_horizontal/wizard/account_report_common_view.xml
+++ b/account_financial_report_horizontal/wizard/account_report_common_view.xml
@@ -7,29 +7,40 @@
             <field name="model">account_financial_report_horizontal.common.report</field>
             <field name="type">form</field>
             <field name="arch" type="xml">
-            <form string="Report Options">
-                  <label nolabel="1" string=""/>
-                  <newline/>
-                   <field name="chart_account_id" widget='selection'/>
-                   <field name="fiscalyear_id"/>
-                   <field name="target_move"/>
-                       <notebook tabpos="up" colspan="4">
-                            <page string="Filters" name="filters">
-                                <field name="filter" on_change="onchange_filter(filter, fiscalyear_id)" colspan="4"/>
-                                    <separator string="Dates" colspan="4"/>
-                                    <field name="date_from" attrs="{'readonly':[('filter', '!=', 'filter_date')], 'required':[('filter', '=', 'filter_date')]}" colspan="4"/>
-                                    <field name="date_to" attrs="{'readonly':[('filter', '!=', 'filter_date')], 'required':[('filter', '=', 'filter_date')]}"  colspan="4"/>
-                                    <separator string="Periods"  colspan="4"/>
-                                    <field name="period_from"  domain="[('fiscalyear_id', '=', fiscalyear_id)]" attrs="{'readonly':[('filter','!=','filter_period')], 'required':[('filter', '=', 'filter_period')]}" colspan="4"/>
-                                    <field name="period_to" domain="[('fiscalyear_id', '=', fiscalyear_id)]" attrs="{'readonly':[('filter','!=','filter_period')], 'required':[('filter', '=', 'filter_period')]}" colspan="4"/>
-                            </page>
-                        </notebook>
+                <form string="Report Options">
+                    <label nolabel="1" string=""/>
+                    <newline/>
+                    <field name="chart_account_id" widget='selection'/>
+                    <field name="fiscalyear_id"/>
+                    <field name="target_move"/>
+                    <notebook tabpos="up" colspan="4">
+                        <page string="Filters" name="filters">
+                            <field name="filter" on_change="onchange_filter(filter, fiscalyear_id)" colspan="4"/>
+                            <separator string="Dates" colspan="4"/>
+                            <field name="date_from"
+                                   attrs="{'readonly':[('filter', '!=', 'filter_date')], 'required':[('filter', '=', 'filter_date')]}"
+                                   colspan="4"/>
+                            <field name="date_to"
+                                   attrs="{'readonly':[('filter', '!=', 'filter_date')], 'required':[('filter', '=', 'filter_date')]}"
+                                   colspan="4"/>
+                            <separator string="Periods" colspan="4"/>
+                            <field name="period_from"
+                                   domain="[('fiscalyear_id', '=', fiscalyear_id), ('special', '=', False)]"
+                                   attrs="{'readonly':[('filter','!=','filter_period')], 'required':[('filter', '=', 'filter_period')]}"
+                                   colspan="4"/>
+                            <field name="period_to"
+                                   domain="[('fiscalyear_id', '=', fiscalyear_id), ('special', '=', False)]"
+                                   attrs="{'readonly':[('filter','!=','filter_period')], 'required':[('filter', '=', 'filter_period')]}"
+                                   colspan="4"/>
+                        </page>
+                    </notebook>
                     <separator colspan="4"/>
                     <group col="4" colspan="4">
                         <button icon="gtk-cancel" special="cancel" string="Cancel" colspan="2"/>
-                        <button icon="gtk-print" name="check_report" string="Print" type="object" colspan="2" default_focus="1" />
+                        <button icon="gtk-print" name="check_report" string="Print" type="object" colspan="2"
+                                default_focus="1"/>
                     </group>
-            </form>
+                </form>
             </field>
         </record>
 
