--- a/dt_product_serial/wizard/stock_partial_picking.xml
+++ b/dt_product_serial/wizard/stock_partial_picking.xml
@@ -30,9 +30,9 @@
                     <field name="pallet_id" groups="stock.view_pallet" widget="selection" />
                 </field>
                 <field name="prodlot_id" position="replace">
-                    <field name="new_prodlot_code" on_change="onchange_new_prodlot_code(new_prodlot_code, product_id, prodlot_id)" />
-                    <field name="prodlot_id" domain="[('product_id', '=', product_id), ('stock_available', '!=', '0')]" invisible="context.get('hide_tracking', False)" attrs="{'required': [('tracking', '=', True), ('new_prodlot_code', '=', False)]}"/>
-                    <field name="split_type" readonly="1"/>
+                    <field name="new_prodlot_code" on_change="onchange_new_prodlot_code(new_prodlot_code, product_id, prodlot_id)"  groups="stock.group_production_lot"/>
+                    <field name="prodlot_id" domain="[('product_id', '=', product_id), ('stock_available', '!=', '0')]" invisible="context.get('hide_tracking', False)" attrs="{'required': [('tracking', '=', True), ('new_prodlot_code', '=', False)]}" groups="stock.group_production_lot"/>
+                    <field name="split_type" readonly="1" groups="stock.group_production_lot"/>
                     <field name="tracking_id" invisible="True" />
                 </field>
                 <button string="_Cancel" position="replace" >
