--- a/sale_order_confirm/views/sale_order_confirm_view.xml
+++ b/sale_order_confirm/views/sale_order_confirm_view.xml
@@ -189,7 +189,7 @@
                             <group colspan="2" col="2" groups="base.group_extended">
                                 <separator string="Conditions" colspan="2"/>
                                 <field name="payment_term" widget="selection"/>
-                                <field name="fiscal_position" widget="selection"/>
+                                <field name="fiscal_position" widget="selection" domain="[('customer', '=', True)]"/>
                                 <field name="validity"/>
                                 <field name="company_id" widget="selection" groups="base.group_multi_company"/>
                             </group>
