--- a/l10n_it_sale/wizard/assign_ddt.xml
+++ b/l10n_it_sale/wizard/assign_ddt.xml
@@ -12,13 +12,19 @@
                         <field name="number_method" nolabel="1" />
                         <group col="2" attrs="{'invisible': [('number_method', '=', 'sequence')]}" >
                             <label colspan="2" string="This will assign the DDT number"/>
-                            <field name="ddt_number" attrs="{'required': [('number_method', '=', 'force')]}"/>
+                            <field name="ddt_number_already_exist" invisible="1"/>
+                            <field name="ddt_number" attrs="{'required': [('number_method', '=', 'force')]}" on_change="onchange_ddt_number(ddt_number)"/>
+                            <group col="2" attrs="{'invisible': [('ddt_number_already_exist', '=', False)]}" >
+                                <label colspan="2" string="DDT number already exist" />
+                            </group>
                         </group>
                         <!--<field name="ddt_next_number" readonly="1"/>-->
                         <field name="ddt_date" />
                         <separator colspan="2"/>
-                        <button icon="gtk-cancel" special="cancel" string="Cancel"/>
-                        <button icon="gtk-ok" name="assign_ddt" string="Assign" type="object"/>
+                        <group col="2" attrs="{'invisible': [('ddt_number_already_exist', '=', False)]}" >
+                            <button icon="gtk-cancel" special="cancel" string="Cancel"/>
+                            <button icon="gtk-ok" name="assign_ddt" string="Assign" type="object"  />
+                        </group>
                     </group>
                 </form>
             </field>
