change position on tabs

--- a/sale_direct_buy/views/inherit_sale_order.xml
+++ b/sale_direct_buy/views/inherit_sale_order.xml
@@ -46,12 +46,10 @@
                     <field name="supplier_id"/>
                 </xpath>
 
-                <field name="picking_ids" position="after" >
-                    <group groups="purchase.group_purchase_user">
-                        <separator colspan="4" string="Purchase"/>
-                        <field colspan="4" name="purchase_order_ids" nolabel="1"/>
-                    </group>
-                </field>
+                <xpath expr="//separator[@string='Invoices']"  position="before">
+                    <separator colspan="4" string="Purchase"/>
+                    <field colspan="4" name="purchase_order_ids" nolabel="1"/>
+                </xpath>
 
             </field>
         </record>
