--- a/project_extended/views/project_task.xml
+++ b/project_extended/views/project_task.xml
@@ -70,7 +70,12 @@
             <field name="type">form</field>
             <field name="inherit_id" ref="project.view_task_form2"/>
             <field name="arch" type="xml">
-                <field name = "priority"  position="replace" />
+                <field name = "user_id" position="attributes" >
+                    <attribute name="groups">project.group_project_manager</attribute>
+                </field>
+                <field name = "priority" position="attributes" >
+                    <attribute name="groups">project.group_project_manager</attribute>
+                </field>
                 <field name = "date_deadline"  position="after">
                         <field name="priority" attrs="{'readonly':[('state','in',['done', 'cancelled'])]}" />
                 </field>
